--- a/Web/Front/Css/css_cheat_sheet.css
+++ b/Web/Front/Css/css_cheat_sheet.css
@@ -92,7 +92,7 @@ h2{
     filter: blur(2px)
 }
 
-#body1{
+body{
     margin:0%;
-    background-color: rgb(17, 150, 17);
+    background-color: rgb(69, 10, 177);
 }
