--- a/Web/Front/Css/css_cheat_sheet.css
+++ b/Web/Front/Css/css_cheat_sheet.css
@@ -57,6 +57,13 @@ h2{
     border-radius: 50px;
 }
 
+#container3{
+    background-image: url("https://static.vecteezy.com/system/resources/previews/005/891/677/original/abstract-arrows-ribbons-crowns-hearts-explosions-and-other-elements-in-hand-drawn-style-for-concept-design-doodle-illustration-template-for-decoration-free-vector.jpg") ;
+    border: black solid;
+    border-radius: 50px;
+}
+
+
 #Parrafo{
     color:rgb(10, 79, 119)
 }
