--- a/Web/Front/Css/flexbox.css
+++ b/Web/Front/Css/flexbox.css
@@ -29,6 +29,20 @@ body{
     border: 1px black solid;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
 
+}
+
+.nav-bar img{
+    flex-grow: 100px;
+}
+
+.nav-bar #menu{
+    flex-grow: 1;
+}
+
+#menu{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
